Dev-RBI/src/objects/RBI_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <description>Stores Relationship between Subscription and Customer</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RBI_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Launched_Cities__c</fullName>
        <label>Launched Cities</label>
        <picklist>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahadurgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhiwani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhiwari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharuheda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharuhera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faridabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gachar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghaziabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghazipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manesar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meerut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mohali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neemrana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panchkula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panipat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upcoming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upcoming_Cities__c</fullName>
        <label>Upcoming Cities</label>
        <picklist>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahadurgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhiwani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhiwari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharuheda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharuhera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faridabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gachar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghaziabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghazipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manesar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meerut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mohali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neemrana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panchkula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panipat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SUB-{000000000}</displayFormat>
        <label>Subscription Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <recordTypes>
        <fullName>Launched</fullName>
        <active>true</active>
        <description>RBI_Subscriptions Object Recordtype</description>
        <label>Launched</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upcoming</fullName>
        <active>true</active>
        <description>RBI_Subscriptions Object Recordtype</description>
        <label>Upcoming</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>